# SCP_Welcome_devcontainer

./: CMakeLists.txt  sdkconfig
.devcontainer/: Dockerfile  devcontainer.json
main/: EepromInfo.c  scp_welcome_main.c
